config/billing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-deployment
  namespace: ubahhukob
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-billing
  template:
    metadata:
      labels:
        app: my-app-billing
    spec:   
      containers:
        - name: billing-app
          image: ubahhukob/billing-service:v1
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /config
          args:
            - "--spring.config.location=/config/application.yaml"
            - "--spring.datasource.username=$(SPRING_DATASOURCE_USERNAME)"
            - "--spring.datasource.password=$(SPRING_DATASOURCE_PASSWORD)"
          ports:
          - containerPort: 7979
          livenessProbe:
            httpGet:
              path: /billing-service/actuator/health
              port: 7979
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /billing-service/actuator/info
              port: 7979
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 2
      volumes:
        - name: config-volume
          configMap:
            name: billing-app-config
