config/health-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app-health
  template:
    metadata:
      labels:
        app: my-app-health
    spec:   
      containers:
        - name: health-app
          image: ubahhukob/health:latest
          volumeMounts:
            - name: config-volume
              mountPath: /config
          args:
            - "--spring.config.location=/config/application.yaml"
            - "--spring.datasource.username=$(SPRING_DATASOURCE_USERNAME)"
            - "--spring.datasource.password=$(SPRING_DATASOURCE_PASSWORD)"
          ports:
          - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 120
            timeoutSeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /actuator/info
              port: 8000
            initialDelaySeconds: 120
            timeoutSeconds: 30
            periodSeconds: 120
            successThreshold: 1
            failureThreshold: 2
      volumes:
        - name: config-volume
          configMap:
            name: health-app-config
