config/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ubahhukob
spec:
  selector:
    app: my-app-auth
  ports:
    - protocol: TCP
      port: 7999
      targetPort: 7999
  type: ClusterIP
