config/health-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: my-app-health
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
