config/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ubahhukob
spec:
  selector:
    app: my-app-order
  ports:
    - protocol: TCP
      port: 7976
      targetPort: 7976
  type: ClusterIP
