config/public-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-no-auth
  #namespace: ubahhukob
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /auth-service
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 7999
